# twilio-agent-connect-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DOCS_CONTROL.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/skills/sync-to-ts-sdk/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml
.streamlit/: config.toml
docs/: README.md  _config.yml  api-reference.md  api.md  index.md  opentelemetry-proposal.md
docs/api/: adapters.md  channels.md  core.md  models.md  server.md
docs/examples/: aws.md  index.md  openai.md
docs/getting-started/: index.md  installation.md  quickstart.md  twilio-setup.md
docs/guides/: architecture.md  channels.md  memory.md  openai-adapter.md  server.md
examples/: .env.example  README.md
examples/adapters/: openai_sdk.py
examples/agents/bedrock/: agents.py  converse.py
examples/channels/: README.md  sms.py  voice.py  voice_escalation.py  voice_session.py  voice_streaming.py
examples/exec_demo/: README.md  business_data.py  llm_service.py  server.py  tools.py
examples/exec_demo/dashboard/: __init__.py  event_handler.py
examples/quickstart/: README.md  server.py
examples/quickstart/templates/: index.html
examples/servers/: README.md  llm_service.py  voice.py
getting_started/: README.md
getting_started/examples/: .env.example  overview.py
getting_started/examples/aws/: bedrock_converse.py
getting_started/examples/chat/: .env.example  README.md  app.py
getting_started/examples/features/: handoff.py  outbound.py  rcs.py  relay_only.py  twiml_customization.py  voice_streaming.py  voice_twiml_customization.py  whatsapp.py
getting_started/examples/observability-demo/: README.md  docker-compose.yml  generate_test_data.py  grafana-dashboard.yml  grafana-tac-dashboard.json  openai_with_observability.py  otel-collector-config.yml  prometheus.yml
getting_started/examples/openai/: chat_completions.py  openai_sdk.py  responses_api.py
getting_started/examples/partners/: aws_bedrock_agentcore.py  aws_bedrock_converse.py  aws_strands.py  langchain.py  openai_agents.py  openai_chat_completions.py  openai_responses_api.py
getting_started/examples/providers/: aws_bedrock_agent.py  aws_bedrock_converse.py  openai_chat_completions.py  openai_responses_api.py
getting_started/twilio_setup/: README.md  server.py
getting_started/twilio_setup/templates/: index.html
playground/: README.md  app.py  packages.txt  requirements.txt
src/tac/: __init__.py  __main__.py
src/tac/adapters/: __init__.py  options.py  prompt_builder.py
src/tac/channels/: __init__.py  base.py  chat.py  messaging.py  rcs.py  session.py  session_manager.py  sms.py  voice.py  websocket_manager.py  websocket_protocol.py  whatsapp.py
src/tac/context/: __init__.py  base.py  conversation.py  knowledge.py  memory.py
src/tac/core/: __init__.py  config.py  logging.py  tac.py
src/tac/intelligence/: __init__.py  operator_result_processor.py
src/tac/models/: __init__.py  conversation.py  handoff.py  handoff_data.py  intelligence.py  knowledge.py  memory.py  outbound.py  pagination.py  session.py  tac.py  voice.py
tests/: conftest.py  test_chat_channel.py  test_config.py  test_config_from_env.py  test_conversation.py  test_handoff.py  test_http_client_config.py  test_init.py  test_injectable_tool_args.py  test_integration.py  test_intelligence.py  test_interrupt.py  test_knowledge.py  test_memory_fallback.py  test_memory_mode_once.py  test_memory_models.py  test_openai_adapter.py  test_outbound.py  test_participant_reconciliation.py  test_profile_lookup_in_memory.py  test_profile_retrieval.py  test_prompt_builder.py  test_rcs_channel.py  test_redaction.py  test_relay_only_mode.py  test_server.py  test_session.py  test_session_manager.py  test_sms_channel.py  test_tac.py  test_taf.py  test_tools.py  test_user_agent.py  test_voice_channel.py  test_voice_models.py  test_webhook_validation.py  test_whatsapp_channel.py
(+42 files in other folders)
