[project]
name = "twilio-agent-connect"
version = "0.0.3"
description = "A Python framework for building agentic applications with Twilio"
authors = [{ name = "Twilio Conversation AI", email = "team_conversational-ai@twilio.com" }]
readme = "README.md"
homepage = "https://github.com/twilio/twilio-agent-connect-python"
repository = "https://github.com/twilio/twilio-agent-connect-python"
requires-python = ">=3.10,<4"
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.0.0,<3",
    "httpx>=0.27.0,<1",
    "twilio>=9.8.3,<10",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0,<9",
    "pytest-asyncio>=0.21.0,<1",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.8.0,<1",
    "mypy>=1.0.0,<2",
]
examples = [
    "openai>=2.0.0",
    "openai-agents>=0.6.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0,<2",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "python-multipart>=0.0.12",
]

[tool.uv]
default-groups = ["dev", "examples"]

[tool.uv.workspace]
members = ["tac"]

[tool.uv.sources]
tac = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tac"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]


[tool.ruff.lint.isort]
known-first-party = ["tac"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
exclude = [
    "tac/tools/examples/.*",
    ".*/site-packages/mcp/.*"
]

# Specify the paths to type check
[[tool.mypy.overrides]]
module = ["twilio.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

# Ignore mcp module to avoid syntax errors from newer Python features
[[tool.mypy.overrides]]
module = "mcp.*"
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src/tac --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as an asyncio test",
    "no_auto_mock: disable automatic mocking of ConversationClient.get_configuration()",
    "no_stub_profile_calls: disable autouse stub of MemoryClient.lookup_profile/create_profile",
]

[tool.coverage.run]
source = ["src/tac"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
